intel/bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/log.txt
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:29:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:35:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:41:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:47:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:53:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:59:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:65:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:71:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:77:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:83:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:89:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:95:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:101:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:107:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:113:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:119:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:125:20: error: default initialization of an object of const type 'const smallfelem' (aka 'int *const')
  const smallfelem small1;
                   ^
                          = nullptr
bench_214_work/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:126:20: error: default initialization of an object of const type 'const smallfelem' (aka 'int *const')
  const smallfelem small2;
                   ^
                          = nullptr
16 warnings and 3 errors generated.
HLS FPGA Parse FAILED.
